--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ngc": "ngc",
     "build": "rm -rf aot dist && npm run ngc && node ./scripts/copy-package",
+    "buildDemo": "npm build && node ./scripts/copy-package-to-demo.js",
     "publishPackage": "npm run build && cd dist && npm publish"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^6.0.41",
+    "copy-dir": "^0.3.0",
     "typescript": "^2.0.3"
   }
 }
