--- a/demo/package.json
+++ b/demo/package.json
@@ -22,7 +22,8 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.25",
+    "angular-api-handler": "file:../dist"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
