Added install module task to quickly reinstall module under development

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,8 @@
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "lite": "lite-server",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "install-module": "npm install angular-api-handler --force"
   },
   "dependencies": {
     "@angular/common": "~2.2.0",
