--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "^2.2.1",
     "@angular/compiler": "^2.2.1",
     "@angular/compiler-cli": "^2.2.1",
+    "@angular/http": "^2.2.1",
     "@angular/platform-browser": "^2.2.1",
     "rxjs": ">=5.0.0-beta.0"
   },
