--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "build": "rm -rf aot dist && npm run ngc && npm run rollup && node ./scripts/copy-package",
     "publishPackage": "npm run build && cd dist && npm publish"
   },
-  "dependencies": {
-    "@angular/core": "^2.2.1",
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/compiler-cli": "^2.2.1",
-    "@angular/http": "^2.2.1",
-    "@angular/platform-browser": "^2.2.1",
-    "rxjs": ">=5.0.0-beta.0"
+  "peerDependencies": {
+    "@angular/core": "^2.0.0",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "rxjs": ">=5.0.0-beta.12"
   },
   "devDependencies": {
+    "@angular/core": "2.2.3",
+    "@angular/common": "2.2.3",
+    "@angular/compiler": "2.2.3",
+    "@angular/compiler-cli": "2.2.3",
+    "@angular/http": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
     "@types/node": "^6.0.41",
     "rollup": "^0.36.4",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.3",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.21"
   }
 }
