--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.0.4",
   "description": "An angular api handler for intercepting http requests",
   "license": "MIT",
-  "keywords": ["angular2", "api", "handler", "mock", "cache"],
+  "keywords": [
+    "angular2",
+    "api",
+    "handler",
+    "mock",
+    "cache"
+  ],
   "author": "Stephen D'Olier <stephen@dolier.net>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sdolier/angular-api-handler.git"
   },
   "scripts": {
-    "ngc": "ngc",
+    "tsc": "tsc",
+    "ngc": "ngc -p tsconfig-build.json",
     "rollup": "rollup -c",
     "build": "rm -rf aot dist && npm run ngc && npm run rollup && node ./scripts/copy-package",
-    "publishPackage": "npm run build && cd dist && npm publish"
+    "test-once": "tsc && karma start karma.conf.js --single-run",
+    "publishPackage": "npm run build && cd dist && npm publish",
+    "postinstall": "typings install",
+    "tsconfig-glob": "tsconfig . --indent 2"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
@@ -23,16 +33,22 @@
     "rxjs": ">=5.0.0-beta.12"
   },
   "devDependencies": {
-    "@angular/core": "2.2.3",
     "@angular/common": "2.2.3",
     "@angular/compiler": "2.2.3",
     "@angular/compiler-cli": "2.2.3",
+    "@angular/core": "2.2.3",
     "@angular/http": "2.2.3",
     "@angular/platform-browser": "2.2.3",
     "@types/node": "^6.0.41",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
     "rollup": "^0.36.4",
-    "typescript": "^2.0.3",
     "rxjs": "5.0.0-beta.12",
+    "tsconfig-glob": "^0.4.3",
+    "typescript": "^2.0.3",
+    "typings": "1.4.0",
     "zone.js": "0.6.21"
   }
 }
