--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
   global:
     - DISPLAY=:99.0
     - CHROME_BIN=chromium-browser
+before_script:
+  - sh -e /etc/init.d/xvfb start
 install:
   - npm install
 script:
