Implemented karma test framework

--- a/package.json
+++ b/package.json
@@ -39,13 +39,17 @@
     "@angular/core": "2.2.3",
     "@angular/http": "2.2.3",
     "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
     "@types/node": "^6.0.41",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
+    "requirejs": "^2.3.2",
     "rollup": "^0.36.4",
     "rxjs": "5.0.0-beta.12",
+    "systemjs": "^0.19.41",
     "tsconfig-glob": "^0.4.3",
     "typescript": "^2.0.3",
     "typings": "1.4.0",
