--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "ngc": "ngc -p tsconfig-build.json",
     "rollup": "rollup -c",
     "build": "rm -rf aot dist && npm run ngc && npm run rollup && node ./scripts/copy-package",
-    "test": "tsc && karma start karma.conf.js --single-run",
+    "test": "tsc && karma start karma.conf.js --single-run && npm run coverage-ts",
     "publishPackage": "npm run build && cd dist && npm publish",
     "postinstall": "typings install",
-    "tsconfig-glob": "tsconfig . --indent 2"
+    "tsconfig-glob": "tsconfig . --indent 2",
+    "coverage-ts": "remap-istanbul -i reports/coverage/json/coverage-final.json -o reports/coverage/html-ts -t html"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
@@ -44,8 +45,11 @@
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-htmlfile-reporter": "^0.3.4",
     "karma-jasmine": "^1.0.2",
     "karma-requirejs": "^1.1.0",
+    "remap-istanbul": "^0.7.0",
     "requirejs": "^2.3.2",
     "rollup": "^0.36.4",
     "rxjs": "5.0.0-beta.12",
